--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.6",
     "autoprefixer": "^10.4.4",
     "axios": "^0.27.2",
     "postcss": "^8.4.12",
