--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.5",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
