--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "postcss": "^8.4.12",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "swiper": "^8.2.6",
     "react-toastify": "^9.0.5",
+    "swiper": "^8.2.6",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
