--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.5",
     "swiper": "^8.2.6",
